// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries reducer should init correctly 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
  },
}
`;

exports[`queries reducer updates should correctly update 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
  },
}
`;

exports[`queries reducer updates should correctly update a query with a $gt: null selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
  },
  "b": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "_id": Object {
          "$gt": null,
        },
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
  },
}
`;

exports[`queries reducer updates should correctly update a query with a selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
  },
  "b": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": true,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
  },
}
`;

exports[`queries reducer updates should correctly update two queries 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
  },
  "b": Object {
    "bookmark": null,
    "count": 2,
    "data": Array [
      "todo_1",
      "todo_2",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": 1337,
    "options": null,
  },
}
`;

exports[`queries reducer updates should not crash if data is null 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": "not-existing-doc",
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
  },
}
`;

exports[`queries reducer updates should not update a query not concerned even with a selector 1`] = `
Object {
  "a": Object {
    "bookmark": null,
    "count": 1,
    "data": Array [
      "todo_3",
    ],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": undefined,
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "loaded",
    "hasMore": false,
    "id": "a",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": 1337,
    "lastUpdate": 1337,
    "options": null,
  },
  "b": Object {
    "bookmark": null,
    "count": 0,
    "data": Array [],
    "definition": QueryDefinition {
      "bookmark": undefined,
      "cursor": undefined,
      "doctype": "io.cozy.todos",
      "fields": undefined,
      "id": undefined,
      "ids": undefined,
      "includes": undefined,
      "indexedFields": undefined,
      "limit": undefined,
      "partialFilter": undefined,
      "referenced": undefined,
      "selector": Object {
        "done": false,
      },
      "skip": undefined,
      "sort": undefined,
    },
    "fetchStatus": "pending",
    "hasMore": false,
    "id": "b",
    "lastError": null,
    "lastErrorUpdate": null,
    "lastFetch": null,
    "lastUpdate": null,
    "options": null,
  },
}
`;
